tests/baselines/reference/functionParameterArityMismatch(strict=true).errors.txt
functionParameterArityMismatch.ts(1,18): error TS7010: 'f1', which lacks return-type annotation, implicitly has an 'any' return type.
functionParameterArityMismatch.ts(2,18): error TS7010: 'f1', which lacks return-type annotation, implicitly has an 'any' return type.
functionParameterArityMismatch.ts(3,1): error TS2554: Expected 1-3 arguments, but got 0.
functionParameterArityMismatch.ts(4,1): error TS2575: No overload expects 2 arguments, but overloads do exist that expect either 1 or 3 arguments.
functionParameterArityMismatch.ts(5,13): error TS2554: Expected 1-3 arguments, but got 4.
functionParameterArityMismatch.ts(7,18): error TS7010: 'f2', which lacks return-type annotation, implicitly has an 'any' return type.
functionParameterArityMismatch.ts(8,18): error TS7010: 'f2', which lacks return-type annotation, implicitly has an 'any' return type.
functionParameterArityMismatch.ts(9,18): error TS7010: 'f2', which lacks return-type annotation, implicitly has an 'any' return type.
functionParameterArityMismatch.ts(10,18): error TS7010: 'f2', which lacks return-type annotation, implicitly has an 'any' return type.
functionParameterArityMismatch.ts(11,1): error TS2575: No overload expects 1 arguments, but overloads do exist that expect either 0 or 2 arguments.
functionParameterArityMismatch.ts(12,1): error TS2575: No overload expects 3 arguments, but overloads do exist that expect either 2 or 4 arguments.
functionParameterArityMismatch.ts(13,1): error TS2575: No overload expects 5 arguments, but overloads do exist that expect either 4 or 6 arguments.
functionParameterArityMismatch.ts(14,22): error TS2554: Expected 0-6 arguments, but got 7.
functionParameterArityMismatch.ts(15,19): error TS2554: Expected 0-6 arguments, but got 7.


==== functionParameterArityMismatch.ts (14 errors) ====
    declare function f1(a: number);
                     ~~
!!! error TS7010: 'f1', which lacks return-type annotation, implicitly has an 'any' return type.
    declare function f1(a: number, b: number, c: number);
                     ~~
!!! error TS7010: 'f1', which lacks return-type annotation, implicitly has an 'any' return type.
    f1();
    ~~
!!! error TS2554: Expected 1-3 arguments, but got 0.
!!! related TS6210 functionParameterArityMismatch.ts:1:21: An argument for 'a' was not provided.
    f1(1, 2);
    ~~
!!! error TS2575: No overload expects 2 arguments, but overloads do exist that expect either 1 or 3 arguments.
    f1(1, 2, 3, 4);
                ~
!!! error TS2554: Expected 1-3 arguments, but got 4.
    
    declare function f2();
                     ~~
!!! error TS7010: 'f2', which lacks return-type annotation, implicitly has an 'any' return type.
    declare function f2(a: number, b: number);
                     ~~
!!! error TS7010: 'f2', which lacks return-type annotation, implicitly has an 'any' return type.
    declare function f2(a: number, b: number, c: number, d: number);
                     ~~
!!! error TS7010: 'f2', which lacks return-type annotation, implicitly has an 'any' return type.
    declare function f2(a: number, b: number, c: number, d: number, e: number, f: number);
                     ~~
!!! error TS7010: 'f2', which lacks return-type annotation, implicitly has an 'any' return type.
    f2(1);
    ~~
!!! error TS2575: No overload expects 1 arguments, but overloads do exist that expect either 0 or 2 arguments.
    f2(1, 2, 3);
    ~~
!!! error TS2575: No overload expects 3 arguments, but overloads do exist that expect either 2 or 4 arguments.
    f2(1, 2, 3, 4, 5);
    ~~
!!! error TS2575: No overload expects 5 arguments, but overloads do exist that expect either 4 or 6 arguments.
    f2(1, 2, 3, 4, 5, 6, 7);
                         ~
!!! error TS2554: Expected 0-6 arguments, but got 7.
    f2(1, 2, 3, 4, 5, ...[6, 7]);
                      ~~~~~~~~~
!!! error TS2554: Expected 0-6 arguments, but got 7.
    